force-app/main/default/objects/Disposition_Offer__c/Disposition_Offer__c.object-meta.xml
<CustomObject>
    <label>Disposition Offer</label>
    <nameField>
        <displayFormat>OFFER-{0000}</displayFormat>
        <label>Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disposition Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>