force-app/main/default/objects/Disposition_Offer__c/fields/Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name__c</fullName>
    <label>Buyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>