force-app/main/default/objects/Disposition_Offer__c/fields/Closing_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Closing_Period_Days__c</fullName>
    <label>Closing Period Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>