force-app/main/default/objects/Disposition_Offer__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition</label>
    <referenceTo>Disposition__c</referenceTo>
    <relationshipLabel>Disposition Offers</relationshipLabel>
    <relationshipName>Disposition_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>