force-app/main/default/objects/Disposition_Offer__c/fields/DPEG_Counter_Date__c.field-meta.xml
<CustomField>
    <fullName>DPEG_Counter_Date__c</fullName>
    <label>DPEG Counter Date</label>
    <type>Date</type>
</CustomField>