force-app/main/default/objects/Disposition_Offer__c/fields/DPEG_Counter_Price__c.field-meta.xml
<CustomField>
    <fullName>DPEG_Counter_Price__c</fullName>
    <label>DPEG Counter Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>