force-app/main/default/objects/Disposition_Offer__c/fields/Due_Diligence_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Days__c</fullName>
    <label>Due Diligence Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>