force-app/main/default/objects/Disposition_Offer__c/fields/Earnest_Money_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Earnest_Money_Proposed__c</fullName>
    <label>Earnest Money Proposed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>