force-app/main/default/objects/Disposition_Offer__c/fields/NDA_Status__c.field-meta.xml
<CustomField>
    <fullName>NDA_Status__c</fullName>
    <label>NDA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>