force-app/main/default/objects/Disposition_Offer__c/fields/Offer_Financing_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Financing_Type__c</fullName>
    <label>Offer Financing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Cash</fullName>
            </value>
            <value>
                <fullName>Financed (with contingency)</fullName>
            </value>
            <value>
                <fullName>Financed (no contingency)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>